First version revised for appsettings configuration

--- a/Blazing.Twilio.WasmVideo/Server/appsettings.json
+++ b/Blazing.Twilio.WasmVideo/Server/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Twilio": {
+    "AccpuntSID": "AC3c9e46332ed8611c71bea071809e1ea0",
+    "APIKey": "SK5b0803fd857132e4927f239f62de12c5",
+    "APISecret": "fJRGMpTFehvofLK1pFMOd507Qaqu8quL"
+  }
 }
